--- a/01-Fundamentals-Part-1/final/index.html
+++ b/01-Fundamentals-Part-1/final/index.html
@@ -1,31 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>JavaScript Fundamentals – Part 1</title>
-    <style>
-      body {
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        background: linear-gradient(to top left, #28b487, #7dd56f);
-      }
-      h1 {
-        font-family: sans-serif;
-        font-size: 50px;
-        line-height: 1.3;
-        width: 100%;
-        padding: 30px;
-        text-align: center;
-        color: white;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>JavaScript Fundamentals – Part 1</h1>
 
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>JavaScript Fundamentals – Part 1</title>
+  <style>
+    body {
+      height: 100vh;
+      display: grid;
+      justify-items: center;
+      grid-gap: 40px;
+      grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+      background: linear-gradient(to top left, #28b487, #7dd56f);
+      z-index: 1;
+    }
+
+    h1 {
+      font-family: sans-serif;
+      font-size: 50px;
+      line-height: 1.3;
+      width: 100%;
+      padding: 30px;
+      text-align: center;
+      color: white;
+    }
+
+    div {
+      width: 90%;
+      background: url(/greg-banek-z8xlVnEp850-unsplash.jpg);
+      background-position: center;
+      background-size: cover;
+      margin: 30px;
+      cursor: pointer;
+      color: white;
+    }
+
+    div::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      background: blue;
+      opacity: 0%;
+      transition: linear 0.4s;
+      background-image: url(/audio-media-multimedia-16-svgrepo-com.svg);
+      background-size: 50px 50px;
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+
+    div:hover::before {
+      content: '';
+      background-image: url(/audio-media-multimedia-16-svgrepo-com.svg);
+      background-size: 50px 50px;
+      background-repeat: no-repeat;
+      background-position: center;
+      color: white;
+      opacity: 60%;
+    }
+  </style>
+</head>
+
+<body>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+
+
+
+  <script src="/complete-javascript-course/01-Fundamentals-Part-1/starter/script.js"></script>
+</body>
+
 </html>
